--- a/public/css/sidebars.css
+++ b/public/css/sidebars.css
@@ -51,7 +51,7 @@ main {
 .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
+  background-color: #6adf7c;
 }
 
 .btn-toggle::before {
@@ -78,7 +78,11 @@ main {
 }
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-  background-color: #cbf7ea;
+  background-color: #6363e0;
+}
+.btn-toggle-nav[aria-expanded="true"] {
+    background-color: #6363e0;
+    color: #fff; /* Ubah warna teks jika perlu */
 }
 
 .scrollarea {
